# ha-omada-open-api

./: pyproject.toml
.github/: copilot-instructions.md
custom_components/omada_open_api/: api.py  config_flow.py  coordinator.py  icons.json  manifest.json  sensor.py  strings.json
tests/: test_api.py  test_sensor_client.py  test_sensor_device.py  test_sensor_site.py
