[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-omada-open-api"
version = "1.3.2"
description = "Home Assistant integration for TP-Link Omada Open API"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}

[tool.ruff]
required-version = ">=0.15.2"
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "A001",   # Variable shadowing a Python builtin
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "C",      # complexity
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes/autoflake
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # import conventions
    "INP",    # flake8-no-pep420
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "PYI",    # flake8-pyi
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]

ignore = [
    "D202",     # No blank lines allowed after function docstring
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D406",     # Section name should end with a newline
    "D407",     # Section name underlining
    "D417",     # Missing argument descriptions in docstring
    "E501",     # Line too long (handled by formatter)
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "PT011",    # pytest.raises() is too broad
    "S105",     # Possible hardcoded password (false positives for config constants)
    "SIM102",   # Use a single if statement instead of nested if statements
    "SIM103",   # Return the condition directly
    "SIM108",   # Use ternary operator
    "TRY003",   # Avoid specifying long messages outside the exception class
    "UP031",    # Use format specifiers instead of percent format
    "UP032",    # Use f-string instead of format call
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.omada_open_api"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = [
    "D",       # Don't require docstrings in tests
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "TC",      # Don't require type-checking blocks in tests
]

[tool.pylint.MAIN]
py-version = "3.14"
jobs = 2
persistent = false
fail-on = ["I"]

[tool.pylint.BASIC]
class-const-naming-style = "any"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "format",
    "abstract-method",
    "broad-exception-caught",
    "cyclic-import",
    "duplicate-code",
    "import-error",
    "inconsistent-return-statements",
    "locally-disabled",
    "not-context-manager",
    "suppressed-message",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-boolean-expressions",
    "unexpected-keyword-arg",
    "unused-argument",
    "useless-suppression",
    "wrong-import-order",
]

enable = [
    "use-symbolic-message-instead",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"



[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked"]
strict = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.coverage.run]
source = ["custom_components"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
